[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialogue_tree/scripts/BasicDialogue.gd" type="Script" id=1]

[node name="BasicDialogue" type="GraphNode"]
margin_right = 343.0
margin_bottom = 220.0
title = "Basic Dialogue"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
LIMIT = 170

[node name="ReferenceNameEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 327.0
margin_bottom = 48.0
placeholder_text = "ReferenceName"

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 49.0
margin_right = 327.0
margin_bottom = 53.0

[node name="ActorNameEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 54.0
margin_right = 327.0
margin_bottom = 78.0
placeholder_text = "Actor"

[node name="DialogueEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 79.0
margin_right = 327.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 125 )
wrap_enabled = true
[connection signal="text_changed" from="DialogueEdit" to="." method="_on_DialogueEdit_text_changed"]
